Fix on collapsedHeight and CSS

--- a/css/layout.css
+++ b/css/layout.css
@@ -243,7 +243,7 @@ ul#nav li.current a { color: crimson; }
 }
 
 #resume a, #resume a:visited  { color: #11ABB0; }
-#resume a:hover, #resume a:focus { color: #313131; }
+#resume a:hover, #resume a:focus { color: crimson; }
 
 #resume h1 {
    font: 18px/24px 'opensans-bold', sans-serif;
@@ -302,7 +302,7 @@ ul#nav li.current a { color: crimson; }
   line-height: 26px;
   padding: 0 20px 0 23px;
   position: relative;
-  margin: 0 10px 30px 0;
+  margin: 0 10px 10px 0;
   text-decoration: none;
   -webkit-transition: color 0.2s;
 }
